--- a/app/views/lost_missing_long_overdues/_form.html.erb
+++ b/app/views/lost_missing_long_overdues/_form.html.erb
@@ -1,73 +1,92 @@
-<%= form_for(@lost_missing_long_overdue) do |f| %>
-  <% if @lost_missing_long_overdue.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@lost_missing_long_overdue.errors.count, "error") %> prohibited this lost_missing_long_overdue from being saved:</h2>
-
-      <ul>
-      <% @lost_missing_long_overdue.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+<%= form_for @lost_missing_long_overdue, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :item_number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :item_number, :class => 'text_field' %>
     </div>
-  <% end %>
+  </div>
+  <div class="control-group">
+    <%= f.label :bib_number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :bib_number, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :title, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :title, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :imprint, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :imprint, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :isbn, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :isbn, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :status, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :status, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :checkouts, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :checkouts, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :location, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :location, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :note, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :note, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :call_number, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :call_number, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :volume, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :volume, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :barcode, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :barcode, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :due_date, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :due_date, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :last_checkout, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :last_checkout, :class => 'text_field' %>
+    </div>
+  </div>
 
-  <div class="field">
-    <%= f.label :item_number %><br>
-    <%= f.number_field :item_number %>
-  </div>
-  <div class="field">
-    <%= f.label :bib_number %><br>
-    <%= f.number_field :bib_number %>
-  </div>
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :imprint %><br>
-    <%= f.text_field :imprint %>
-  </div>
-  <div class="field">
-    <%= f.label :isbn %><br>
-    <%= f.text_field :isbn %>
-  </div>
-  <div class="field">
-    <%= f.label :status %><br>
-    <%= f.text_field :status %>
-  </div>
-  <div class="field">
-    <%= f.label :checkouts %><br>
-    <%= f.number_field :checkouts %>
-  </div>
-  <div class="field">
-    <%= f.label :location %><br>
-    <%= f.text_field :location %>
-  </div>
-  <div class="field">
-    <%= f.label :note %><br>
-    <%= f.text_field :note %>
-  </div>
-  <div class="field">
-    <%= f.label :call_number %><br>
-    <%= f.text_field :call_number %>
-  </div>
-  <div class="field">
-    <%= f.label :volume %><br>
-    <%= f.text_field :volume %>
-  </div>
-  <div class="field">
-    <%= f.label :barcode %><br>
-    <%= f.text_field :barcode %>
-  </div>
-  <div class="field">
-    <%= f.label :due_date %><br>
-    <%= f.date_select :due_date %>
-  </div>
-  <div class="field">
-    <%= f.label :last_checkout %><br>
-    <%= f.date_select :last_checkout %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                lost_missing_long_overdues_path, :class => 'btn' %>
   </div>
 <% end %>
