--- a/app/views/lost_missing_long_overdues/index.html.erb
+++ b/app/views/lost_missing_long_overdues/index.html.erb
@@ -1,31 +1,33 @@
-<h1>Listing lost_missing_long_overdues</h1>
-
-<table>
+<%- model_class = LostMissingLongOverdue -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Item number</th>
-      <th>Bib number</th>
-      <th>Title</th>
-      <th>Imprint</th>
-      <th>Isbn</th>
-      <th>Status</th>
-      <th>Checkouts</th>
-      <th>Location</th>
-      <th>Note</th>
-      <th>Call number</th>
-      <th>Volume</th>
-      <th>Barcode</th>
-      <th>Due date</th>
-      <th>Last checkout</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:item_number) %></th>
+      <th><%= model_class.human_attribute_name(:bib_number) %></th>
+      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%= model_class.human_attribute_name(:imprint) %></th>
+      <th><%= model_class.human_attribute_name(:isbn) %></th>
+      <th><%= model_class.human_attribute_name(:status) %></th>
+      <th><%= model_class.human_attribute_name(:checkouts) %></th>
+      <th><%= model_class.human_attribute_name(:location) %></th>
+      <th><%= model_class.human_attribute_name(:note) %></th>
+      <th><%= model_class.human_attribute_name(:call_number) %></th>
+      <th><%= model_class.human_attribute_name(:volume) %></th>
+      <th><%= model_class.human_attribute_name(:barcode) %></th>
+      <th><%= model_class.human_attribute_name(:due_date) %></th>
+      <th><%= model_class.human_attribute_name(:last_checkout) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
-
   <tbody>
     <% @lost_missing_long_overdues.each do |lost_missing_long_overdue| %>
       <tr>
+        <td><%= link_to lost_missing_long_overdue.id, lost_missing_long_overdue_path(lost_missing_long_overdue) %></td>
         <td><%= lost_missing_long_overdue.item_number %></td>
         <td><%= lost_missing_long_overdue.bib_number %></td>
         <td><%= lost_missing_long_overdue.title %></td>
@@ -40,14 +42,21 @@
         <td><%= lost_missing_long_overdue.barcode %></td>
         <td><%= lost_missing_long_overdue.due_date %></td>
         <td><%= lost_missing_long_overdue.last_checkout %></td>
-        <td><%= link_to 'Show', lost_missing_long_overdue %></td>
-        <td><%= link_to 'Edit', edit_lost_missing_long_overdue_path(lost_missing_long_overdue) %></td>
-        <td><%= link_to 'Destroy', lost_missing_long_overdue, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%=l lost_missing_long_overdue.created_at %></td>
+        <td>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_lost_missing_long_overdue_path(lost_missing_long_overdue), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      lost_missing_long_overdue_path(lost_missing_long_overdue),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Lost missing long overdue', new_lost_missing_long_overdue_path %>
+<%= will_paginate @lost_missing_long_overdues %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_lost_missing_long_overdue_path,
+            :class => 'btn btn-primary' %>
