--- a/app/views/lost_missing_long_overdues/new.html.erb
+++ b/app/views/lost_missing_long_overdues/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New lost_missing_long_overdue</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', lost_missing_long_overdues_path %>
+<%- model_class = LostMissingLongOverdue -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
