--- a/app/views/lost_missing_long_overdues/show.html.erb
+++ b/app/views/lost_missing_long_overdues/show.html.erb
@@ -1,74 +1,47 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = LostMissingLongOverdue -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
+</div>
 
-<p>
-  <strong>Item number:</strong>
-  <%= @lost_missing_long_overdue.item_number %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:item_number) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.item_number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:bib_number) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.bib_number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.title %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:imprint) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.imprint %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:isbn) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.isbn %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.status %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:checkouts) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.checkouts %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:location) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.location %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:note) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.note %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:call_number) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.call_number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:volume) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.volume %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:barcode) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.barcode %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:due_date) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.due_date %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:last_checkout) %>:</strong></dt>
+  <dd><%= @lost_missing_long_overdue.last_checkout %></dd>
+</dl>
 
-<p>
-  <strong>Bib number:</strong>
-  <%= @lost_missing_long_overdue.bib_number %>
-</p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @lost_missing_long_overdue.title %>
-</p>
-
-<p>
-  <strong>Imprint:</strong>
-  <%= @lost_missing_long_overdue.imprint %>
-</p>
-
-<p>
-  <strong>Isbn:</strong>
-  <%= @lost_missing_long_overdue.isbn %>
-</p>
-
-<p>
-  <strong>Status:</strong>
-  <%= @lost_missing_long_overdue.status %>
-</p>
-
-<p>
-  <strong>Checkouts:</strong>
-  <%= @lost_missing_long_overdue.checkouts %>
-</p>
-
-<p>
-  <strong>Location:</strong>
-  <%= @lost_missing_long_overdue.location %>
-</p>
-
-<p>
-  <strong>Note:</strong>
-  <%= @lost_missing_long_overdue.note %>
-</p>
-
-<p>
-  <strong>Call number:</strong>
-  <%= @lost_missing_long_overdue.call_number %>
-</p>
-
-<p>
-  <strong>Volume:</strong>
-  <%= @lost_missing_long_overdue.volume %>
-</p>
-
-<p>
-  <strong>Barcode:</strong>
-  <%= @lost_missing_long_overdue.barcode %>
-</p>
-
-<p>
-  <strong>Due date:</strong>
-  <%= @lost_missing_long_overdue.due_date %>
-</p>
-
-<p>
-  <strong>Last checkout:</strong>
-  <%= @lost_missing_long_overdue.last_checkout %>
-</p>
-
-<%= link_to 'Edit', edit_lost_missing_long_overdue_path(@lost_missing_long_overdue) %> |
-<%= link_to 'Back', lost_missing_long_overdues_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              lost_missing_long_overdues_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_lost_missing_long_overdue_path(@lost_missing_long_overdue), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              lost_missing_long_overdue_path(@lost_missing_long_overdue),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
