--- a/app/assets/stylesheets/losts.css.scss
+++ b/app/assets/stylesheets/losts.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the LostMissingLongOverdues controller here.
+// Place all the styles related to the Losts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
