--- a/app/views/losts/show.html.erb
+++ b/app/views/losts/show.html.erb
@@ -1,46 +1,46 @@
-<%- model_class = LostMissingLongOverdue -%>
+<%- model_class = Lost-%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.titleize %></h1>
 </div>
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:item_number) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.item_number %></dd>
+  <dd><%= @lost.item_number %></dd>
   <dt><strong><%= model_class.human_attribute_name(:bib_number) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.bib_number %></dd>
+  <dd><%= @lost.bib_number %></dd>
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.title %></dd>
+  <dd><%= @lost.title %></dd>
   <dt><strong><%= model_class.human_attribute_name(:imprint) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.imprint %></dd>
+  <dd><%= @lost.imprint %></dd>
   <dt><strong><%= model_class.human_attribute_name(:isbn) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.isbn %></dd>
+  <dd><%= @lost.isbn %></dd>
   <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.status %></dd>
+  <dd><%= @lost.status %></dd>
   <dt><strong><%= model_class.human_attribute_name(:checkouts) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.checkouts %></dd>
+  <dd><%= @lost.checkouts %></dd>
   <dt><strong><%= model_class.human_attribute_name(:location) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.location %></dd>
+  <dd><%= @lost.location %></dd>
   <dt><strong><%= model_class.human_attribute_name(:note) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.note %></dd>
+  <dd><%= @lost.note %></dd>
   <dt><strong><%= model_class.human_attribute_name(:call_number) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.call_number %></dd>
+  <dd><%= @lost.call_number %></dd>
   <dt><strong><%= model_class.human_attribute_name(:volume) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.volume %></dd>
+  <dd><%= @lost.volume %></dd>
   <dt><strong><%= model_class.human_attribute_name(:barcode) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.barcode %></dd>
+  <dd><%= @lost.barcode %></dd>
   <dt><strong><%= model_class.human_attribute_name(:due_date) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.due_date %></dd>
+  <dd><%= @lost.due_date %></dd>
   <dt><strong><%= model_class.human_attribute_name(:last_checkout) %>:</strong></dt>
-  <dd><%= @lost_missing_long_overdue.last_checkout %></dd>
+  <dd><%= @lost.last_checkout %></dd>
 </dl>
 
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
-              lost_missing_long_overdues_path, :class => 'btn'  %>
+              losts_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_lost_missing_long_overdue_path(@lost_missing_long_overdue), :class => 'btn' %>
+              edit_lost_path(@lost), :class => 'btn' %>
   <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              lost_missing_long_overdue_path(@lost_missing_long_overdue),
+              lost_path(@lost),
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
