add mailer, user model; style views, improve facet

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,6 +1,6 @@
 @import "twitter/bootstrap/bootstrap";
 
-#facets { padding-right: 20px; } 
+#facets { padding-left: 20px; } 
 
 @import "twitter/bootstrap/responsive";
 
