--- a/app/views/losts/index.html.erb
+++ b/app/views/losts/index.html.erb
@@ -1,88 +1,119 @@
 <%- model_class = Lost -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-</div>
-
-<div class="container">
- <div class="container-fluid">
-  <div class="row-fluid">
-  <%= form_tag losts_path, :method => :get do %>
-    <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", name: nil %>
-<% end %>
-</div>
-</div>
-</div>
-    <div id="facets" class="span3">
-      <div class="well sidebar-nav">
-        <ul class="nav nav-list">
-          <h4>Location</h4>
-             <% for row in @search.facet(:loc_trunc).rows %>
-               <% if params[:loc].blank? %>
-                   <li>   <%= link_to row.value, request.params.merge({loc: row.value, page: nil}) %></li>
-               <% else %>
-                 <li> <%= link_to "#{row.value} (remove)", request.params.merge({loc: nil, page: nil}) %></li>
-           
-           <h4>General LC Class</h4>
-             <% for row in @search.facet(:class_trunc).rows %>
-               <% if params[:trunc].blank? %>
-                 <li><%= link_to row.value, request.params.merge({trunc: row.value, page: nil}) %></li>
-               <% else %>
-                 <li> <%= link_to "#{row.value} (remove)", request.params.merge({trunc: nil, page: nil, full: nil}) %></li>
-                 <h4>Full LC Class</h4>
-               <% for row in @search.facet(:class_full).rows %>
-                <% if params[:full].blank?%>
-                 <li><%= link_to row.value, request.params.merge({full: row.value, page: nil}) %></li>
-               <% else %>
-                 <li> <%= link_to "#{row.value} (remove)", request.params.merge({full: nil, page: nil}) %></li>
-               <% end %>
-               <% end %>
-               <% end %>
-               <% end %>
-               <% end %>
-                 </li>
-             <% end %> 
-          </ul>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <div class="page-header">
+      <h1>
+        <%=t '.title', :default => model_class.model_name.human.pluralize.titleize %>
+      </h1>
+    </div>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span9">
+          <%= form_tag losts_path, :method => :get do %>
+          <div class="input-append">
+            <%= text_field_tag :search, params[:search] %><%= submit_tag "Search", name: nil, class: 'btn btn-default' %><% end %>
+          </div>
+          <table class="table table-striped table-condensed table-responsive">
+            <thead>
+              <tr>
+                <th>
+                  <%= model_class.human_attribute_name(:item_number) %>
+                </th>
+                <th>
+                  <%= model_class.human_attribute_name(:title) %>
+                </th>
+                <th>
+                  <%= model_class.human_attribute_name(:status) %>
+                </th>
+                <th>
+                  <%= model_class.human_attribute_name(:location) %>
+                </th>
+                <th>
+                  <%= model_class.human_attribute_name(:call_number) %>
+                </th>
+                <th>
+                  <%= model_class.human_attribute_name(:barcode) %>
+                </th>
+                <th>
+                  <%= model_class.human_attribute_name(:last_checkout) %>
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @losts.each do |lost| %>
+              <tr>
+                <td>
+                  <%= link_to "i#{lost.item_number.to_s}a", lost_path(lost), :class => 'btn btn-info' %>
+                </td>
+                <td>
+                  <%= if lost.title.length > 59 then "#{lost.title[0..60]}..." else lost.title end %>
+                </td>
+                <td>
+                  <%= lost.status %>
+                </td>
+                <td>
+                  <%= lost.location %>
+                </td>
+                <td>
+                  <%= lost.call_number %>
+                </td>
+                <td>
+                  <%= lost.barcode %>
+                </td>
+                <td>
+                  <%= lost.last_checkout %>
+                </td>
+              </tr><% end %>
+            </tbody>
+          </table>
+        </div>
+        <div id="facets" class="span3">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li style="list-style: none">
+                <h4>
+                  Location
+                </h4><% for row in @search.facet(:loc_trunc).rows %><% if params[:loc].blank? %>
+              </li>
+              <li>
+                <%= link_to row.value, request.params.merge({loc: row.value, page: nil}) %>
+              </li><% else %>
+              <li>
+                <%= link_to "#{row.value} (remove)", request.params.merge({loc: nil, page: nil, trunc: nil, full: nil}) %>
+              </li>
+              <li style="list-style: none">
+                <h4>
+                  General LC Class
+                </h4><% for row in @search.facet(:class_trunc).rows %><% if params[:trunc].blank? %>
+              </li>
+              <li>
+                <%= link_to row.value, request.params.merge({trunc: row.value, page: nil}) %>
+              </li><% else %>
+              <li>
+                <%= link_to "#{row.value} (remove)", request.params.merge({trunc: nil, page: nil, full: nil}) %>
+              </li>
+              <li style="list-style: none">
+                <h4>
+                  Full LC Class
+                </h4><% for row in @search.facet(:class_full).rows %><% if params[:full].blank?%>
+              </li>
+              <li>
+                <%= link_to row.value, request.params.merge({full: row.value, page: nil}) %>
+              </li><% else %>
+              <li>
+                <%= link_to "#{row.value} (remove)", request.params.merge({full: nil, page: nil}) %>
+              </li><% end %><% end %><% end %><% end %><% end %><% end %>
+            </ul>
+          </div>
         </div>
       </div>
-<div class="span9">
-  <div class="row">
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:item_number) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:status) %></th>
-      <th><%= model_class.human_attribute_name(:location) %></th>
-      <th><%= model_class.human_attribute_name(:call_number) %></th>
-      <th><%= model_class.human_attribute_name(:barcode) %></th>
-      <th><%= model_class.human_attribute_name(:last_checkout) %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @losts.each do |lost| %>
-      <tr>
-        <td><%= link_to lost.id, lost_path(lost) %></td>
-        <td><%= lost.item_number %></td>
-        <td><%= lost.title %></td>
-        <td><%= lost.status %></td>
-        <td><%= lost.location %></td>
-        <td><%= lost.call_number %></td>
-        <td><%= lost.barcode %></td>
-        <td><%= lost.due_date %></td>
-        <td><%= lost.last_checkout %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-</div>
-</div>
-</div>
-<div class="pagination">
-  <%= will_paginate @search.hits, renderer: BootstrapPagination::Rails %>
-</div>
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_lost_path,
-            :class => 'btn btn-primary' %>
+    </div>
+    <div class="pagination">
+      <%= will_paginate @search.hits, renderer: BootstrapPagination::Rails %>
+    </div>
+  </body>
+</html>
