--- a/app/views/losts/show.html.erb
+++ b/app/views/losts/show.html.erb
@@ -5,15 +5,19 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:item_number) %>:</strong></dt>
-  <dd><%= @lost.item_number %></dd>
+  <dd><%= "i#{@lost.item_number.to_s}a" %></dd>
   <dt><strong><%= model_class.human_attribute_name(:bib_number) %>:</strong></dt>
-  <dd><%= @lost.bib_number %></dd>
+  <dd><%= "b#{@lost.bib_number}a" %></dd>
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
   <dd><%= @lost.title %></dd>
   <dt><strong><%= model_class.human_attribute_name(:imprint) %>:</strong></dt>
   <dd><%= @lost.imprint %></dd>
+
+
   <dt><strong><%= model_class.human_attribute_name(:isbn) %>:</strong></dt>
-  <dd><%= @lost.isbn %></dd>
+  <dd><%= @lost.isbn.gsub(/(\d{13}|\d{9}[X\d])/, "<a href=\"http://www.gobi3.com/hx/Gobi.ashx?location=runsearch&source=quicksearch&quicksearchval=\\1\" target=\"_blank\">\\1</a>").html_safe %></dd>
+
+
   <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
   <dd><%= @lost.status %></dd>
   <dt><strong><%= model_class.human_attribute_name(:checkouts) %>:</strong></dt>
@@ -39,9 +43,4 @@
               losts_path, :class => 'btn'  %>
   <%= link_to t('.edit', :default => t("helpers.links.edit")),
               edit_lost_path(@lost), :class => 'btn' %>
-  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-              lost_path(@lost),
-              :method => 'delete',
-              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-              :class => 'btn btn-danger' %>
 </div>
