--- a/app/views/losts/index.html.erb
+++ b/app/views/losts/index.html.erb
@@ -6,9 +6,7 @@
   </head>
   <body>
     <div class="page-header">
-      <h1>
-        <%=t '.title', :default => model_class.model_name.human.pluralize.titleize %>
-      </h1>
+      <h1>UCL Tricera-Shopper</h1>
     </div>
     <div class="container-fluid">
       <div class="row-fluid">
