add marc file processing

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
 <h1>UCL Selector Reporting Home</h1>
-<%= link_to "Lost, Missing, and Long Overdue Report", losts_path %>
+<div class="container">
+  <%= link_to "Lost, Missing, and Long Overdue Report", losts_path %></br>
+  <%= link_to "Marc Record Processing", marc_uploads_path %>
+</div>
