--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,13 @@
 </head>
 <body>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<% if user_signed_in? %>
+  <p><%= link_to "Logout", destroy_user_session_path, :method => :delete %></p>
+<% else %>
+  <p><%= link_to "Sign in", new_user_session_path %></p>
+<% end %>
 
 <%= yield %>
+
 </body>
 </html>
