--- a/app/views/lmlo_update/new_report.html.erb
+++ b/app/views/lmlo_update/new_report.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Dear <%= @user.name %>,</h1>
+    <h1>Dear <%= @user.email %>,</h1>
     <p>
       There is are new LMLO items ready for your review. 
     </p>
