--- a/app/views/losts/show.html.erb
+++ b/app/views/losts/show.html.erb
@@ -12,7 +12,7 @@
  
   <% unless @lost.oclc.nil? %>
     <dt><strong><%= model_class.human_attribute_name(:oclc) %>:</strong></dt>
-    <dd><%= link_to @lost.oclc, "https://www.worldcat.org/search?q=no:#{@lost.oclc}", target: '_blank' %></dd>
+    <dd><%= @lost.oclc %></dd>
   <% end %> 
 
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
@@ -20,7 +20,7 @@
   <dt><strong><%= model_class.human_attribute_name(:imprint) %>:</strong></dt>
   <dd><%= @lost.imprint %></dd>
   <dt><strong><%= model_class.human_attribute_name(:isbn) %>:</strong></dt>
-  <dd><%= @lost.isbn.gsub(/(\d{13}|\d{9}[X\d])/, "<a href=\"http://www.gobi3.com/hx/Gobi.ashx?location=runsearch&source=quicksearch&quicksearchval=\\1\" target=\"_blank\">\\1</a>").html_safe %></dd>
+    <dd><%= @lost.isbn.gsub(/(\d{13}|\d{9}[X\d])/, "<a href=\"http://www.gobi3.com/hx/Gobi.ashx?location=runsearch&source=quicksearch&quicksearchval=\\1\" target=\"_blank\">\\1</a>").html_safe %></div></dd>
   <dt><strong><%= model_class.human_attribute_name(:status) %>:</strong></dt>
   <dd><%= @lost.status %></dd>
   <dt><strong><%= model_class.human_attribute_name(:checkouts) %>:</strong></dt>
@@ -37,11 +37,14 @@
   <dd><%= @lost.due_date %></dd>
   <dt><strong><%= model_class.human_attribute_name(:last_checkout) %>:</strong></dt>
   <dd><%= @lost.last_checkout %></dd>
-</dl>
+</dl> 
+ <div class="button_unit"><div class="btn-group">
+     <%= link_to 'UCLID', "http://uclid.uc.edu/record=b#{@lost.bib_number}~S39", target: '_blank', class: 'btn' %>
 
-<div class="form-actions">
-  <%= link_to t('.back', :default => t("helpers.links.back")),
-              losts_path, :class => 'btn'  %>
-  <%= link_to t('.edit', :default => t("helpers.links.edit")),
-              edit_lost_path(@lost), :class => 'btn' %>
+     <% unless @lost.oclc.nil? %> 
+     <%= link_to 'OhioLINK', "http://olc1.ohiolink.edu/search/o?SEARCH=#{@lost.oclc}", target: '_blank', class: 'btn' %>
+     <%= link_to 'WorldCat', "https://www.worldcat.org/search?q=no:#{@lost.oclc}", target: '_blank', class: 'btn' %>
+   <% end %>
 </div>
+</div>
+
