--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>UCL Selector Reporting Home</h1>
+<h1>Tricerashopper Home</h1>
 <div class="container">
   <%= link_to "Lost, Missing, and Long Overdue Report", losts_path %></br>
   <%= link_to "Marc Record Processing", marc_uploads_path %>
