--- a/app/views/lmlo_update/new_report.html.erb
+++ b/app/views/lmlo_update/new_report.html.erb
@@ -9,7 +9,7 @@
       There is are new LMLO items ready for your review. 
     </p>
     <p>
-    To view the materials, just follow this link: <%= link_to "#{root_url}#{@user.location}", "#{root_url}#{@user.location}" %>.
+    To view the materials, just follow this link: <%= link_to "#{root_url}losts?#{@user.location.to_query('loc')}", "#{root_url}losts?#{@user.location.to_query('loc')}" %>.
     </p>
   </body>
 </html>
