add navbar, etc

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -2,6 +2,8 @@
 
 #facets { padding-left: 20px; } 
 
+body { padding-top: 60px; } 
+
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
