--- a/app/views/lmlo_update/new_report.html.erb
+++ b/app/views/lmlo_update/new_report.html.erb
@@ -6,7 +6,7 @@
   <body>
     <p>Dear <%= @user.email %>,</p>
     <p>
-      There is are new LMLO items ready for your review. 
+      There are new LMLO items ready for your review. 
     </p>
     <p>
     To view the materials, just follow this link: <%= link_to "#{root_url}losts?#{@user.location.to_query('loc')}", "#{root_url}losts?#{@user.location.to_query('loc')}" %>.
