--- a/app/views/marc_uploads/index.html.erb
+++ b/app/views/marc_uploads/index.html.erb
@@ -1,6 +1,7 @@
-<div class="container">
+<%= render 'layouts/header' %>
+  <div class="container">
   <div class="span9">
-    <h1>Marc Record Processing</h1>
+    <h2>Marc Record Processing</h2>
     <p class="lead">Upload Arkive invoices in *.xlsx format</p>
 
     <div class="hero-unit">   
