--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,6 @@
-<h1>Tricerashopper Home</h1>
-<div class="container">
+<%= render 'layouts/header' %>
+  <div class="container">
+  <h1>UCL Tricerashopper</h1>
   <%= link_to "Lost, Missing, and Long Overdue Report", losts_path %></br>
   <%= link_to "Marc Record Processing", marc_uploads_path %>
 </div>
