add dda expenditure report

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,6 +1,7 @@
 @import "twitter/bootstrap/bootstrap";
 
-#facets { padding-left: 20px; } 
+#facets { padding-left: 20px; }
+#banner img {float: right; } 
 
 body { padding-top: 60px; } 
 
