--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,8 +15,10 @@
               <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
             <% else %> 
              <%= link_to "Sign in", new_user_session_path %>
-            <% end %>
-          </li></ul>
+           <% end %>
+             
+         </li></ul>
+         <div id="banner"><%= image_tag("UC_logo.png") %></div>
           </div><!--/.nav-collapse -->
         </div>
       </div>
