--- a/app/views/marc_downloads/index.html.erb
+++ b/app/views/marc_downloads/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/header' %>
 <% flash.each do |key, msg| %>
   <%= content_tag :div, msg, :class => [key, " message"], :id => "notice_#{key}" %>
 <%end%>
