--- a/app/views/losts/index.html.erb
+++ b/app/views/losts/index.html.erb
@@ -1,5 +1,6 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
 <%- model_class = Lost -%>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"><html>
 <%= render 'layouts/header' %>
 <body>
   <div class="container-fluid">
@@ -88,7 +89,7 @@
           <% unless params[:loc].include? row.value%>
           <%= link_to row.value, request.params.merge({loc: params[:loc] | [row.value], page: nil})  %>
           <% else %>
-            <%= link_to "#{row.value} (remove)", request.params.merge({loc: remove_loc(params[:loc], row.value), trunc: nil, full: nil}), {style: "color: blue"}  %>
+            <%= link_to "#{row.value} (remove)", request.params.merge({loc: remove_loc(params[:loc], row.value), trunc: nil, full: nil}), {style: "color: red"}  %>
           <% end %>
           <% else %>
           <%= link_to row.value, request.params.merge({loc: [row.value], page: nil})  %> 
@@ -107,7 +108,7 @@
           <%= link_to row.value, request.params.merge({trunc: row.value, page: nil}) %>
           </li><% else %>
           <li>
-          <%= link_to "#{row.value} (remove)", request.params.merge({trunc: nil, page: nil, full: nil}), {style: "color: blue"} %>
+          <%= link_to "#{row.value} (remove)", request.params.merge({trunc: nil, page: nil, full: nil}), {style: "color: red"} %>
           </li><%end%><% end %>
           <% if params[:trunc].present? %> <h4>
             Full Class
@@ -117,7 +118,7 @@
           <%= link_to row.value, request.params.merge({full: row.value, page: nil}) %>
           </li><% else %>
           <li>
-          <%= link_to "#{row.value} (remove)", request.params.merge({full: nil, page: nil}), {style: "color: blue"} %>
+          <%= link_to "#{row.value} (remove)", request.params.merge({full: nil, page: nil}), {style: "color: red"} %>
           </li><% end %><% end %><% end %>
           <%end%>
         </ul>
