--- a/app/views/serials/index.html.erb
+++ b/app/views/serials/index.html.erb
@@ -1,39 +1,98 @@
 <%- model_class = Lost -%>
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"><html>
 <%= render 'layouts/header' %>
-<div class='container-fluid span10'>
-  <h1>Listing serials</h1>
+<div class='container-fluid'>
+  <div class='row'>
+    <div id='facets' class='span2'>
 
-  <table class="table table-striped table-condensed table-responsive">
-    <thead>
-      <tr>
-        <th><%= "Order #" %></th>
-        <th><%= model_class.human_attribute_name(:fund) %></th>
-        <th><%= model_class.human_attribute_name(:vendor) %></th>
-        <th><%= model_class.human_attribute_name(:format) %></th>
-        <th><%= model_class.human_attribute_name(:order_type) %></th>
-        <th><%= model_class.human_attribute_name(:acq_type) %></th>
-        <th><%= "Bibliographic info" %></th>
-      </tr>
-    </thead>
+      <h1>Facets</h1>
 
-    <tbody>
-      <% @serials.each do |serial| %>
-        <tr>
-          <td><%= "o#{serial.order_number}a" %></td>
-          <td><%= serial.fund %></td>
-          <td><%= serial.vendor %></td>
-          <td><%= serial.format %></td>
-          <td><%= serial.order_type %></td>
-          <td><%= serial.acq_type %></td>
-          <td>
-            <p><%= serial.title %></p>
-            <% if serial.issns.length > 0 %>
-              <p><%= serial.issns.join(", ") %></p>
-            <% end %>
-          </td>
-        </tr>
+      <h3>Fund</h3>
+
+      <% if params[:fund].nil? %>
+        <% @search.facet(:fund).rows.each do |f| %>
+          <%= link_to("#{f.value} (#{f.count})", url_for(params.merge({ fund: f.value }))) %>
+        <% end %>
+      <% else %>
+        <%= link_to("#{params[:fund]} (remove)", url_for(params.merge({ fund: nil }))) %>
       <% end %>
-    </tbody>
-  </table>
+
+      <h3>Vendor</h3>
+
+      <% if params[:vendor].nil? %>
+        <% @search.facet(:vendor).rows.each do |f| %>
+          <%= link_to("#{f.value} (#{f.count})", url_for(params.merge({ vendor: f.value }))) %>
+        <% end %>
+      <% else %>
+        <%= link_to("#{params[:vendor]} (remove)", url_for(params.merge({ vendor: nil }))) %>
+      <% end %>
+
+      <h3>Format</h3>
+
+      <% if params[:format].nil? %>
+        <% @search.facet(:format).rows.each do |f| %>
+          <%= link_to("#{f.value} (#{f.count})", url_for(params.merge({ format: f.value }))) %>
+        <% end %>
+      <% else %>
+        <%= link_to("#{params[:format]} (remove)", url_for(params.merge({ format: nil }))) %>
+      <% end %>
+
+      <h3>Order type</h3>
+
+      <% if params[:order_type].nil? %>
+        <% @search.facet(:order_type).rows.each do |f| %>
+          <%= link_to("#{f.value} (#{f.count})", url_for(params.merge({ order_type: f.value }))) %>
+        <% end %>
+      <% else %>
+        <%= link_to("#{params[:order_type]} (remove)", url_for(params.merge({ order_type: nil }))) %>
+      <% end %>
+
+      <h3>Acq type</h3>
+
+      <% if params[:acq_type].nil? %>
+        <% @search.facet(:acq_type).rows.each do |f| %>
+          <%= link_to("#{f.value} (#{f.count})", url_for(params.merge({ acq_type: f.value }))) %>
+        <% end %>
+      <% else %>
+        <%= link_to("#{params[:acq_type]} (remove)", url_for(params.merge({ acq_type: nil }))) %>
+      <% end %>
+
+    </div>
+    <div id='results' class='span10'>
+      <h1>Results</h1>
+
+      <table class="table table-striped table-condensed table-responsive">
+        <thead>
+          <tr>
+            <th>Order #</th>
+            <th><%= model_class.human_attribute_name(:fund) %></th>
+            <th><%= model_class.human_attribute_name(:vendor) %></th>
+            <th><%= model_class.human_attribute_name(:format) %></th>
+            <th><%= model_class.human_attribute_name(:order_type) %></th>
+            <th><%= model_class.human_attribute_name(:acq_type) %></th>
+            <th>Bibliographic info</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% @serials.each do |serial| %>
+            <tr>
+              <td><%= "o#{serial.order_number}a" %></td>
+              <td><%= serial.fund %></td>
+              <td><%= serial.vendor %></td>
+              <td><%= serial.format %></td>
+              <td><%= serial.order_type %></td>
+              <td><%= serial.acq_type %></td>
+              <td>
+                <p><%= serial.title %></p>
+                <% if serial.issns.length > 0 %>
+                  <p><%= serial.issns.join(", ") %></p>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
