--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,5 +3,7 @@
   <h1>UCL Tricerashopper</h1>
   <%= link_to "Lost, Missing, and Long Overdue Report", losts_path %><br>
   <%= link_to "Marc Record Processing", marc_uploads_path %><br>
-  <%= link_to "DDA Expenditures Report", dda_expenditures_path %>
+  <%= link_to "DDA Expenditures Report", dda_expenditures_path %><br>
+  <%= link_to "Material Orders", orders_path %><br>
+  <%= link_to "MARC Record Download", marc_downloads_path %>
 </div>
