add save condition to new-order mailer and fix formatting

--- a/app/views/order_mailer/new_order.html.erb
+++ b/app/views/order_mailer/new_order.html.erb
@@ -7,25 +7,33 @@
   <body>
     <h4>Order Confirmation</h4>
     <p>
-    <table style="width:100%">
-        <tr>
-          <td><strong><%= model_class.human_attribute_name(:author) %>:</strong></td>
-          <td><strong><%= model_class.human_attribute_name(:title) %>:</strong></td>
-          <td><strong><%= model_class.human_attribute_name(:publisher) %>:</strong></td>
-          <td><strong><%= model_class.human_attribute_name(:isbn) %>:</strong></td>
-          <td><strong><%= model_class.human_attribute_name(:fund) %>:</strong></td>
-          <td><strong><%= model_class.human_attribute_name(:cost) %>:</strong></td>
-        </tr>
-        <tr>
-          <td><%= @order.author %></td>
-          <td><%= @order.title %></td>
-          <td><%= @order.publisher %></td>
-          <td><%= @order.isbn %></td>
-          <td><%= @order.fund %></td>
-          <td><%= @order.cost %></td>
-        </tr>
-      </table>
+    <table style="width:75%">
+      <tr>
+        <td><strong><%= model_class.human_attribute_name(:author) %>:</strong></td>
+        <td><%= @order.author %></td>
+      </tr>
+      <tr>  
+        <td><strong><%= model_class.human_attribute_name(:title) %>:</strong></td>
+        <td><%= @order.title %></td>
+      </tr>
+      <tr>
+        <td><strong><%= model_class.human_attribute_name(:publisher) %>:</strong></td>
+        <td><%= @order.publisher %></td>
+      </tr>
+      <tr>
+        <td><strong><%= model_class.human_attribute_name(:isbn) %>:</strong></td>
+        <td><%= @order.isbn %></td>
+      </tr>
+      <tr>
+        <td><strong><%= model_class.human_attribute_name(:fund) %>:</strong></td>
+        <td><%= @order.fund %></td>
+      </tr>
+      <tr>
+        <td><strong><%= model_class.human_attribute_name(:cost) %>:</strong></td>
+        <td><%= @order.cost %></td>
+      </tr>
+    </table>
     </p>
-    <p><%= link_to "#{root_url}orders_path(@order)", "#{root_url}orders_path(@order)" %></p>
+    <p><%= link_to orders_path(@order), orders_path(@order) %></p>
   </body>
 </html>
