--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,6 @@
+<%- model_class = Order -%>
 <html>
 <%= render 'layouts/header' %>
-<%- model_class = Order -%>
 <body>
   <div class="container-fluid">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
@@ -14,50 +14,11 @@
 </div>
 <div class="row-fluid">
   <div class="span3">
-    <div id="facets">
-    <div class="well sidebar-nav">
-      <ul class="nav nav-list">
-        <h4>Status</h4>
-        <% for row in @search.facet(:workflow_state).rows %>
-            <li>
-          <% if params[:state].blank? %>
-            <%= link_to model_class.human_attribute_name(row.value), state: row.value %>
-        <% else %>
-          <%= link_to "#{model_class.human_attribute_name(row.value)} (remove)", request.params.merge({state: nil, page: nil}) %> 
-        <% end %>
-        </li>
-        <% end %>
-
-      </ul>
-    </div>
-   </div>
+    <%= render "facets" %>
   </div>
-        <div class="span8">
-  <table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:author) %></th>
-      <th><%= model_class.human_attribute_name(:fund) %></th>
-      <th><%= model_class.human_attribute_name(:cost) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th>Status</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @orders.each do |order| %>
-      <tr>
-        <td><%= link_to order.title, order_path(order) %></td>
-        <td><%= order.author %></td>
-        <td><%= order.fund %></td>
-        <td><%= order.cost.to_s.insert(-3,'.') %></td>
-        <td><%= order.created_at.strftime("%m/%d/%Y") %></td>
-        <td><%= model_class.human_attribute_name(order.workflow_state) %></td>
-     </tr>
-    <% end %>
-  </tbody>
-</table>
-</div>
+  <div class="span8">
+    <%= render "results_body" %>
+  </div>
 </div>
 <div class="container-fluid">
    <div class="well">
